--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.34.0</version> <!-- Versión más reciente al momento de escribir esto -->
+        </dependency>
+
+        <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-guice</artifactId>
             <version>3.10</version>
@@ -60,6 +66,7 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <?m2e execute onConfiguration?>
                         <id>create-db</id>
                         <phase>process-test-resources</phase>
                         <goals>
